2001-01-24  Ulrich Drepper  <drepper@redhat.com>

	* conform/conformtest.pl (checknamespace): Ignore #undef lines.

	* configure.in: Comment out binutils version test.

	* stdlib/strtod.c (str_to_mpn): Correct parsing of thousands
	separators.
	Reported by Lagardere Jean-Francois <LAGARDEREJ@thmulti.com>.

	* stdlib/tst-strtod.c (locale_test): New function.
	(main): Call locale_test.
	* stdlib/Makefile (tst-strtod-ENV): New variable.

2001-01-24  Mark Kettenis  <kettenis@gnu.org>

	* hurd/hurdsig.c (_hurdsig_getenv): Remove spurious innermost
	declaration of value such that we actually return the value of the
	environment variable.

2001-01-24  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/init-first.c: Remove extra __sysctl
	prototype.
	* sysdeps/unix/sysv/linux/dl-osinfo.h: Likewise.

	* include/sys/sysctl.h: New file.

2001-01-23  Andreas Jaeger  <aj@suse.de>

	* stdlib/Makefile ($(objpfx)isomac.out): Also pass sysincludes to
	isomac.

	* elf/dl-load.c (_dl_init_paths): Don't use strdupa in function
	arguments.  Reported by Jiri Kubicek <kubicek@bitsmart.com>,
	closes PR libc/2039.

	* manual/install.texi (Tools for Compilation): Change required
	binutils version.

2001-01-22  Andreas Jaeger  <aj@suse.de>

	* configure.in: Add test for new enough binutils version, move
	compiler/binutils test up.

	* Versions.def: Add version GLIBC_2.2.2.

2001-01-21  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/TESTS: UTF-8 test data for IBM932 and IBM943 are now
	available.
	* iconvdata/testdata/IBM932: New file.
	* iconvdata/testdata/IBM932..UTF8: New file.
	* iconvdata/testdata/IBM943: New file.
	* iconvdata/testdata/IBM943..UTF8: New file.
	Contributed by Masahide Washizawa <washi@jp.ibm.com>.

2001-01-21  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/unix/sysv/linux/powerpc/mmap64.c: Correctly mask offset.

2001-01-21  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c: Remove a few unnecessary initializers of global
	variables.
