@@ -1,5 +1,9 @@
 2001-01-24  Ulrich Drepper  <drepper@redhat.com>
 
+	* conform/conformtest.pl: Handle allow-header correctly.
+
+	* conform/data/time.h-data: Use correct comment form.
+
 	* conform/conformtest.pl (checknamespace): Ignore #undef lines.
 
 	* configure.in: Comment out binutils version test.
